// /* eslint-disable no-undef */
// import React from "react";
// import { render } from "@testing-library/react";
// import ESInputSwitch from "../ESInputSwitch";

// test("It renders without crashing", () => {
//   const component = render(<ESInputSwitch id="switch-example-1" />);
//   expect(component).toBeTruthy();
// });

// it("With Label matches DOM Snapshot", () => {
//   const domTree = render(<ESInputSwitch id="switch-example-2" />);
//   expect(domTree).toMatchSnapshot();
// });

// it("Without Label matches DOM Snapshot", () => {
//   const domTree = render(<ESInputSwitch id="switch-example-3" />);
//   expect(domTree).toMatchSnapshot();
// });

// it("renders with a custom CSS class Snapshot", () => {
//   const domTree = render(
//     <ESInputSwitch id="switch-example-4" className="active" />
//   );
//   expect(domTree).toMatchSnapshot();
// });

// it("renders with a disabled state Snapshot", () => {
//   const domTree = render(
//     <ESInputSwitch id="switch-example-5" disabled className="active" />
//   );
//   expect(domTree).toMatchSnapshot();
// });

// it("renders with a disabled state with an 'on' indicator Snapshot", () => {
//   const domTree = render(
//     <ESInputSwitch
//       id="switch-example-5"
//       disabled
//       className="active"
//       defaultChecked
//     />
//   );
//   expect(domTree).toMatchSnapshot();
// });

// it("renders with a no icons Snapshot", () => {
//   const domTree = render(
//     <ESInputSwitch id="switch-example-6" className="active" hideIcons={true} />
//   );
//   expect(domTree).toMatchSnapshot();
// });
